--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "knex": "ts-node node_modules/.bin/knex"
+    "knex": "ts-node node_modules/.bin/knex",
+    "dev": "node node_modules/directus/dist/cli"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "@types/express": "^4.17.8",
     "directus": "^9.0.0-beta.10",
     "dotenv": "^8.2.0",
+    "joi": "^17.2.1",
     "knex": "^0.21.6",
     "pg": "^8.4.1"
   }
