--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "knex": "ts-node node_modules/.bin/knex",
-    "dev": "node node_modules/directus/dist/cli"
+    "dev": "node node_modules/directus/dist/cli",
+    "init": "git clone https://github.com/directus/next.git --depth=1",
+    "build": "rm -rf extensions/endpoints/dasec && cp -r src/endpoints extensions/endpoints/dasec"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/core": "^7.4.4",
     "@types/express": "^4.17.8",
-    "directus": "^9.0.0-beta.10",
+    "directus": "^9.0.0-beta.13",
     "dotenv": "^8.2.0",
     "joi": "^17.2.1",
     "knex": "^0.21.6",
