--- a/package.json
+++ b/package.json
@@ -2,24 +2,31 @@
   "name": "d-store",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/endpoints/index.ts",
   "scripts": {
     "knex": "ts-node node_modules/.bin/knex",
     "dev": "node node_modules/directus/dist/cli",
-    "init": "git clone https://github.com/directus/next.git --depth=1",
-    "build": "rm -rf extensions/endpoints/dasec && cp -r src/endpoints extensions/endpoints/dasec"
+    "build": "rm -rf extensions/endpoints/dasec && rollup -c",
+    "r": "rollup -c"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nestjs/common": "^7.4.4",
-    "@nestjs/core": "^7.4.4",
     "@types/express": "^4.17.8",
-    "directus": "^9.0.0-beta.13",
+    "directus": "^9.0.0-rc.2",
     "dotenv": "^8.2.0",
     "joi": "^17.2.1",
     "knex": "^0.21.6",
     "pg": "^8.4.1"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
+    "rollup": "^2.32.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.3"
   }
 }
