--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.8",
     "directus": "^9.0.0-rc.2",
     "dotenv": "^8.2.0",
+    "faker": "^5.1.0",
     "joi": "^17.2.1",
     "knex": "^0.21.6",
     "pg": "^8.4.1"
@@ -25,6 +26,9 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@types/faker": "^5.1.3",
+    "@types/lodash": "^4.14.162",
+    "lodash": "^4.17.20",
     "rollup": "^2.32.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
